--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="icon" href="favicon (4).ico">
 </head>
 
 <body>
